--- a/config.h.in
+++ b/config.h.in
@@ -127,6 +127,9 @@
 /* define if net/pfvar.h defines PF_NAT through PF_NORDR */
 #undef HAVE_PF_NAT_THROUGH_PF_NORDR
 
+/* Define to 1 if remote packet capture is to be supported */
+#undef HAVE_REMOTE
+
 /* define if you have the Septel API */
 #undef HAVE_SEPTEL_API
 
